--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "jest-plugin-context": "^2.9.0"
+    "jest-dom": "^1.12.1",
+    "jest-plugin-context": "^2.9.0",
+    "react-testing-library": "^5.0.1"
   }
 }
